# ARoMEpy

./: LICENSE  README.md  my_PyARoME.py  pyproject.toml  utilities.py
arome/: __init__.py  __version__.py  arome.py
aromepy/: aromepy.py  utilities.py
notebook/: arome.ipynb  run.ipynb
